--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Fineyst Patches – Custom Velcro Patches for Businesses</title>
+
+  <meta name="description" content="Fineyst Patches provides high-quality custom Velcro name patches, embroidered patches, and woven patches for businesses, uniforms, and tactical use. Fast production and business-friendly pricing." />
+
+  <style>
+    body {font-family: Arial, sans-serif; margin: 0; padding: 20px; line-height: 1.6; background: #f8fafc;}
+    h1,h2,h3 {color: #111;}
+    a {color: #0369a1; text-decoration: none;}
+    a:hover {text-decoration: underline;}
+    .container {max-width: 850px; margin: auto; background: #ffffff; padding: 25px; border-radius: 10px;}
+  </style>
+</head>
+
+<body>
+<div class="container">
+
+<h1>Fineyst Patches – Premium Custom Velcro Name Patches for Professional Use</h1>
+
+<p><strong>Fineyst Patches</strong> is a trusted manufacturer of business-grade custom patches including Velcro name patches, embroidered patches, and woven patches. Each patch is produced with accuracy, clean detailing, and durable materials designed for uniforms, corporate branding, tactical teams, hospitality, sportswear, and industrial workwear.</p>
+
+<h2>What Makes Fineyst Patches Reliable for Business Orders</h2>
+<p>Fineyst Patches focuses on precision stitchwork, clear text readability, color accuracy, and long-lasting backing options. Custom Velcro name patches are especially popular due to their easy on-and-off application, professional appearance, and compatibility with tactical vests, jackets, shirts, and work uniforms.</p>
+
+<h2>Services & Patch Options</h2>
+<ul>
+  <li>Custom Velcro name patches (hook backing included)</li>
+  <li>Embroidered patches for apparel branding</li>
+  <li>Woven patches for detailed artwork</li>
+  <li>PVC patches for rugged outdoor use</li>
+  <li>Iron-on, sew-on, and adhesive backings</li>
+</ul>
+
+<h2>Business-Friendly Pricing & Fast Production</h2>
+<p>Pricing depends on patch size, thread coverage, backing type, and order quantity. Fineyst Patches accommodates both small and bulk orders with transparent quotes and efficient turnaround times. Businesses receive digital mockups before production begins.</p>
+
+<h2>Direct Ordering Link</h2>
+<p>To explore custom Velcro name patch designs, visit the link below:</p>
+
+<p><a href="https://www.fineystpatches.com/patches/custom-velcro-name-patches" target="_blank">Fineyst Custom Velcro Name Patches</a></p>
+
+<hr>
+
+<h2>FAQ – People Also Ask</h2>
+
+<h3>What are custom Velcro name patches used for?</h3>
+<p>They are commonly used on tactical uniforms, security outfits, work jackets, and professional gear where removable name identification is required.</p>
+
+<h3>Are Velcro name patches durable?</h3>
+<p>Yes, high-quality patches are designed to withstand daily use, outdoor activity, and repeated attachment and removal.</p>
+
+<h3>Can I order patches with my business logo?</h3>
+<p>Yes. Fineyst Patches accepts logo-based designs, text-based patches, and fully custom artwork.</p>
+
+<h3>What is the minimum quantity for ordering?</h3>
+<p>There is no strict MOQ for basic name patches. Bulk pricing is available for large orders.</p>
+
+<h3>How do I place an order?</h3>
+<p>Simply visit the ordering link above and submit your design or instructions. A representative will follow up with a mockup and quote.</p>
+
+<hr>
+
+<p><strong>Fineyst Patches — Your trusted source for custom business patches.</strong></p>
+
+</div>
+</body>
+</html>
 
