--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <h1>Fineyst Patches – Premium Custom Velcro Name Patches for Professional Use</h1>
 
-<p><strong>Fineyst Patches</strong> is a trusted manufacturer of business-grade custom patches including Velcro name patches, embroidered patches, and woven patches. Each patch is produced with accuracy, clean detailing, and durable materials designed for uniforms, corporate branding, tactical teams, hospitality, sportswear, and industrial workwear.</p>
+<p><strong>Fineyst Patches</strong>  is a trusted manufacturer of business-grade <a href="https://www.fineystpatches.com/" target="_blank">custom patches</a> including Velcro name patches, embroidered patches, and woven patches. Each patch is produced with accuracy, clean detailing, and durable materials designed for uniforms, corporate branding, tactical teams, hospitality, sportswear, and industrial workwear.</p>
 
 <h2>What Makes Fineyst Patches Reliable for Business Orders</h2>
 <p>Fineyst Patches focuses on precision stitchwork, clear text readability, color accuracy, and long-lasting backing options. Custom Velcro name patches are especially popular due to their easy on-and-off application, professional appearance, and compatibility with tactical vests, jackets, shirts, and work uniforms.</p>
@@ -69,4 +69,3 @@
 </div>
 </body>
 </html>
-
